--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
   },
   "type": "module",
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "solid-start-node": "^0.2.19",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "vite": "^4.1.4"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "solid-start-node": "^0.2.26",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   },
   "dependencies": {
-    "@solidjs/meta": "^0.28.2",
+    "@solidjs/meta": "^0.28.5",
     "@solidjs/router": "^0.8.2",
-    "daisyui": "^3.0.22",
-    "solid-js": "^1.7.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@tanstack/solid-query": "^4.29.11",
+    "daisyui": "^3.1.0",
+    "rehype-highlight": "^6.0.0",
+    "solid-js": "^1.7.6",
+    "solid-markdown": "^1.2.2",
     "solid-start": "^0.2.26",
-    "undici": "^5.15.1"
+    "solid-start-netlify": "^0.2.26",
+    "undici": "^5.22.1"
   },
   "engines": {
     "node": ">=16"
