--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,9 @@
     "jsxImportSource": "solid-js",
     "jsx": "preserve",
     "strict": true,
-    "types": ["solid-start/env"],
-    "baseUrl": "./",
-    "paths": {
-      "~/*": ["./src/*"]
-    }
+    "types": [
+      "solid-start/env"
+    ],
+    "baseUrl": "./"
   }
 }
