--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,10 @@
     "jsxImportSource": "solid-js",
     "jsx": "preserve",
     "strict": true,
-    "types": [
-      "solid-start/env"
-    ],
-    "baseUrl": "./"
+    "types": ["solid-start/env"],
+    "baseUrl": "./",
+    "paths": {
+      "~/*": ["./src/*"]
+    }
   }
 }
