--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "solid-js": "^1.7.6",
     "solid-markdown": "^1.2.2",
     "solid-start": "^0.2.26",
+    "solid-start-netlify": "^0.2.26",
     "undici": "^5.22.1"
   },
   "engines": {
