--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@solidjs/router": "^0.8.2",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/solid-query": "^4.29.11",
+    "cssnano": "^6.0.1",
     "daisyui": "^3.1.0",
     "rehype-highlight": "^6.0.0",
     "solid-js": "^1.7.6",
